--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node src/index.js"
   },
   "type": "module",
   "keywords": [],
