--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
   "scripts": {
     "start": "node src/index.js"
   },
-  "engines": {
-    "node": "16"
-  },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
-    "cors": "^2.8.5",
+    "axios": "^1.7.7",
+    "chrome-launcher": "1.1.2",
+    "cors": "2.8.5",
     "express": "4.19.2",
     "node-id3": "0.2.6",
-    "puppeteer": "^13.0.0"
+    "puppeteer-core": "23.2.1"
   }
 }
