--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,22 @@ jobs:
     - name: Deploy to VPS
       run: |
         ssh -o StrictHostKeyChecking=no root@45.159.248.213 '
-        cd $APP_PATH ||
-        git clone $GITHUB_REPO $APP_PATH &&
-        cd $APP_PATH &&
-        git pull origin master &&
-        sudo docker build -t $APP_NAME . &&
-        sudo docker stop $APP_NAME || true &&
-        sudo docker rm $APP_NAME || true &&
-        sudo docker run -d -p 3000:3000 --name $APP_NAME $APP_NAME
+        # Navigate to application directory or clone repository if not present
+        if [ ! -d "$APP_PATH/.git" ]; then
+          git clone $GITHUB_REPO $APP_PATH
+        fi
+        cd $APP_PATH
+        git pull origin master
+
+        # Build the Docker image
+        sudo docker build -t $APP_NAME .
+
+        # Stop and remove the existing container if it exists
+        if sudo docker ps -q -f name=$APP_NAME; then
+          sudo docker stop $APP_NAME
+          sudo docker rm $APP_NAME
+        fi
+
+        # Run the new container
+        sudo docker run -d -p 80:3000 --name $APP_NAME $APP_NAME
         '
